--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ packages = [{include = "twitter_trending_archive_api"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 Flask = "^2.2.2"
+apache-airflow = "^2.5.1"
+tweepy = "^4.12.1"
 
 
 [build-system]
