--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -88,6 +88,16 @@ services:
       retries: 5
     restart: always
 
+  postgres-twitter:
+    image: postgres:13
+    environment:
+      POSTGRES_USER: twitter
+      POSTGRES_PASSWORD: twitter
+      POSTGRES_DB: twitter
+    volumes:
+      - postgres-twitter-db-volume:/var/lib/postgresql/data
+    restart: always
+
   redis:
     image: redis:latest
     expose:
@@ -278,3 +288,4 @@ services:
 
 volumes:
   postgres-db-volume:
+  postgres-twitter-db-volume:
